--- a/counter/app/build.gradle
+++ b/counter/app/build.gradle
@@ -34,6 +34,9 @@ android {
     buildFeatures {
         compose true
     }
+    composeOptions {
+        kotlinCompilerExtensionVersion "$compose_compiler_extension_version"
+    }
 }
 
 dependencies {
